[metadata]
name = tonic
author = The Neuromorphs of Telluride
author_email = mail@lenzgregor.com
description_file = README.md
description_content_type = text/markdown
long_description_content_type = text/markdown
summary = Neuromorphic datasets and transformations.
project_urls =
    Source code = https://github.com/neuromorphs/tonic
    Documentation = https://tonic.readthedocs.org
license = GNU GPLv3
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[files]
packages = tonic
